--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>3.5.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.1</version>
+        </dependency>
 
     </dependencies>
 
